tests/k3s/workloads-pushed-using-spin-registry-push/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-spin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasm-spin
  template:
    metadata:
      labels:
        app: wasm-spin
    spec:
      runtimeClassName: wasmtime-spin
      containers:
        - name: testwasm
          image: localhost:5000/spin-registry-push/spin-hello-world:latest
          imagePullPolicy: IfNotPresent
          command: ["/"]
          resources: # limit the resources to 128Mi of memory and 100m of CPU
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: wasm-spin
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: wasm-spin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spin-keyvalue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin-keyvalue
  template:
    metadata:
      labels:
        app: spin-keyvalue
    spec:
      runtimeClassName: wasmtime-spin
      containers:
        - name: keyvalue
          image: localhost:5000/spin-registry-push/spin-keyvalue:latest
          command: ["/"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: config-volume
            mountPath: /runtime-config.toml
            subPath: runtime-config.toml
            readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: spin-runtime-config
---
apiVersion: v1
kind: Service
metadata:
  name: spin-keyvalue
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: spin-keyvalue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spin-outbound-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin-outbound-redis
  template:
    metadata:
      labels:
        app: spin-outbound-redis
    spec:
      runtimeClassName: wasmtime-spin
      containers:
        - name: outbound-redis
          image: localhost:5000/spin-registry-push/spin-outbound-redis:latest
          command: ["/"]
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: spin-outbound-redis
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: spin-outbound-redis
---
# Middleware
# Strip prefix /spin
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /spin
      - /outboundredis
      - /keyvalue
      - /static-assets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wasm-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /spin
            pathType: Prefix
            backend:
              service:
                name: wasm-spin
                port:
                  number: 80
          - path: /keyvalue
            pathType: Prefix
            backend:
              service:
                name: spin-keyvalue
                port:
                  number: 80
          - path: /outboundredis
            pathType: Prefix
            backend:
              service:
                name: spin-outbound-redis
                port:
                  number: 80
          - path: /multi-trigger-app
            pathType: Prefix
            backend:
              service:
                name: spin-multi-trigger-app
                port:
                  number: 80
          - path: /static-assets
            pathType: Prefix
            backend:
              service:
                name: spin-static-assets
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spin-multi-trigger-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin-multi-trigger-app
  template:
    metadata:
      labels:
        app: spin-multi-trigger-app
    spec:
      runtimeClassName: wasmtime-spin
      containers:
      - name: spin-multi-trigger-app
        image: localhost:5000/spin-registry-push/spin-multi-trigger-app:latest
        imagePullPolicy: IfNotPresent
        command: ["/"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: spin-multi-trigger-app
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: spin-multi-trigger-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spin-static-assets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin-static-assets
  template:
    metadata:
      labels:
        app: spin-static-assets
    spec:
      runtimeClassName: wasmtime-spin
      containers:
      - name: spin-static-assets
        image: localhost:5000/spin-registry-push/spin-static-assets:latest
        imagePullPolicy: IfNotPresent
        command: ["/"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: spin-static-assets
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: spin-static-assets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spin-mqtt-message-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin-mqtt-message-logger
  template:
    metadata:
      labels:
        app: spin-mqtt-message-logger
    spec:
      runtimeClassName: wasmtime-spin
      containers:
        - name: spin-mqtt-message-logger
          image: localhost:5000/spin-registry-push/spin-mqtt-message-logger:latest
          imagePullPolicy: IfNotPresent
          command: ["/"]
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: spin-mqtt-message-logger
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: spin-mqtt-message-logger
